--- a/cv/en/cv.tex
+++ b/cv/en/cv.tex
@@ -24,7 +24,7 @@
 % personal data
 \firstname{Olivier}
 \familyname{Détour}
-\title{\textbf{Technical Leader}
+\title{\textbf{Team Manager}/\textbf{Technical Lead}
        \newline \Large{\textit{Research \& Development Engineer}}
        \newline \large{\textit{EPITA SRS 2009}}}
 
@@ -62,8 +62,59 @@
 
 \section{Experience}
 \subsection{Professional}
+\cventry{}{Antidot}{Search and Content delivery platform for FluidTopics}{}{}{}
+\cventry{2023--Today}{Team Manager}{Antidot}{\textit{Lyon}}{}
+{
+  \begin{itemize}
+    \renewcommand{\labelitemi}{$\bullet$  }
+    \item Organizing team roles and evaluating employee accomplishments
+    \item Maintains staff by recruiting, selecting, orienting, and training teammates
+  \end{itemize}
+}
+\cventry{2021--Today}{Technical Lead}{Antidot}{\textit{Lyon}}{}
+{
+  \begin{itemize}
+    \renewcommand{\labelitemi}{$\bullet$  }
+    \item Developing technical strategies and roadmaps
+    \item Identifying and resolving technical issues
+    \item Providing technical support to team members
+  \end{itemize}
+}
+\cventry{2020--Today}{DevOps Engineer}{Antidot}{\textit{Lyon}}{}
+{
+  \begin{itemize}
+    \renewcommand{\labelitemi}{$\bullet$  }
+    \item Continous delivery of the Search and Content delivery platform
+    \item Replacement of the legacy monitoring stack to a modern one
+      (\textbf{Prometheus}/\textbf{Loki}/\textbf{Tempo}/\textbf{Grafana})
+    \item Migrate content reply component from bare metal application to a
+      \textbf{Kubernetes} deployment
+    \item Setup \textbf{Consul} clusters across multiple datacenters to ensure
+      a zero trust policy
+  \end{itemize}
+}
+\cventry{2019--Today}{Research \& Development Engineer}{Antidot}{\textit{Lyon}}{}
+{
+  \begin{itemize}
+    \renewcommand{\labelitemi}{$\bullet$  }
+    \item Maintain the Search and Content delivery platform
+      \begin{itemize}
+        \item Index documents to provide search engine
+        \item Store indexed documents to \textbf{MongoDB} across multiple
+          datacenters
+      \end{itemize}
+    \item Design and build new feature over the Search and Content delivery platform
+      \begin{itemize}
+        \item Deliver index databases across multiple datacenters via the
+          \textbf{bittorrent} protocol
+        \item Provide a statistic relevance method in the search engine
+      \end{itemize}
+  \end{itemize}
+}
+
+\vspace{1em}
 \cventry{}{Scality}{made the RING, a distributed storage solution}{}{}{}
-\cventry{2017--Today}{Technical Leader}{Scality}{\textit{Paris}}{}
+\cventry{2017--2019}{Technical Leader}{Scality}{\textit{Paris}}{}
 {
   \begin{itemize}
     \renewcommand{\labelitemi}{$\bullet$  }
@@ -79,7 +130,7 @@
   \begin{itemize}
     \renewcommand{\labelitemi}{$\bullet$  }
     \item Participate in active support of existing features and design of new features
-    \item Redesign the Scality Virtual Server Daemon based on \textbf{Zookeeper} 
+    \item Redesign the Scality Virtual Server Daemon based on \textbf{Zookeeper}
     \item Participate in design and active support of the asynchronous \textbf{GEOS}
       replication of data between data centers
       \begin{itemize}
@@ -91,6 +142,7 @@
     \item Participate in active support of the \textbf{CDMI} connector (\url{https://www.snia.org/cdmi})
   \end{itemize}
 }
+
 \vspace{1em}
 \cventry{}{CodeCase Software}{created a tool to transform a source code base to another language}{}{}{}
 \cventry{2015--2016}{Infrastructure \& Network Engineer}{CodeCase Software}{\textit{La Defense}}{}
@@ -122,6 +174,7 @@
     \item Refactoring of a pricing library in order to make it independent at CTY
   \end{itemize}
 }
+
 \vspace{1em}
 \cventry{2009--2014}{Research \& Development Engineer}{Thales Communications \& Security}{\textit{Gennevilliers}}{}
 {
@@ -160,15 +213,16 @@
 			{Georges Dumézil high school, \textit{Vernon (27)}}{}{}
 
 \section{Skills}
-\cvlistitem{\textbf{Advanced programming skills in C/C++ for 10 years}, educational and professional projects}
+\cvlistitem{\textbf{Advanced DevOps skills}, Massive deployment tools as Ansible or Kubernetes}
+\cvlistitem{\textbf{Advanced programming skills in C/C++ for 15 years}, educational and professional projects}
 \cvlistitem{\textbf{Advanced network programming skills in the Linux kernel}, mastery of proficient in Linux's network stack}
-\cvlistitem{\textbf{Strong software architecture and design}, network \& distributed system}
+\cvlistitem{\textbf{Advanced software architecture and design}, network \& distributed system}
+\cvlistitem{\textbf{Advanced network and security programming skills}, acquired through project responsibilities in Thales, and Antidot}
 \cvlistitem{\textbf{Strong script language skills}, such as Python, Perl, Ruby or Bash}
-\cvlistitem{\textbf{Strong network and security programming skills}, acquired through project responsibilities in Thales}
 \cvlistitem{\textbf{Strong embedded architectures skills}, internship and projects on MIPS-based processors
 		(Cavium Octeon) \& PowerPC-based (PowerQUICC II \& III), performance tests on ARM-based processors
 		(Freescale P1010, iMX6, \& Marvell OMAP 3530) and personal projects on Marvell Kirkwood (IPSec gateway)}
-\cvlistitem{\textbf{Good network and security design concepts}, taking part of many design task forces to work on
+\cvlistitem{\textbf{Strong network and security design concepts}, taking part of many design task forces to work on
                 embedded system architecture with performance and security constraints}
 
 \section{Personal contributions}
